--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -4,6 +4,5 @@ show_downloads: true
 titles_from_headings:
   enabled: false
 author:
-  name: "Java+Android Student"
-  href: "https://ddc-java.github.io"
-  
+  name: "Levi Sanchez"
+  href: "https://github.com/levisanchez"
